--- a/dm_ames.Rmd
+++ b/dm_ames.Rmd
@@ -88,6 +88,40 @@ ggplot(data = ames, mapping = aes(x = Yr.Sold, colour = SalePrice)) +
   geom_freqpoly(binwidth = 0.1)
 ```
 
+```{r}
+ggplot(data = ames, mapping = aes(x = SalePrice, colour = Yr.Sold)) +
+  geom_freqpoly(binwidth = 100000)
+```
+
+
+```{r}
+ames %>% group_by(Yr.Sold) %>% 
+         summarise(mean=mean(SalePrice), 
+                   sd = sd(SalePrice))
+```
+
+
+Let's see if there is a trend in the year the houses were sold and the sale price. 
+```{r}
+ggplot(ames, aes(x=SalePrice, fill=Yr.Sold)) + 
+    geom_histogram() + 
+    facet_wrap(~Yr.Sold)
+```
+I like this set of graphics best so far, but I am still not sure if this is clear on what I am looking at. 
+
+```{r}
+ggplot(ames, aes(x=SalePrice, fill=Yr.Sold)) + 
+    geom_histogram() + 
+    facet_wrap(~Yr.Sold)+
+  geom_freqpoly(binwidth = 10000)+
+  coord_cartesian(xlim = c(0, 550000))
+```
+I think setting a binwidth is what I want to do to make it more clear, but I am not sure what to set it at. I have played around with different numbers and so far 10,000 looks the best. Any suggestions here?
+ 
+```{r}
+ggplot(ames, aes(x=SalePrice, col=Yr.Sold)) + geom_density()
+```
+I don't think this one makes any sense.
 
 
 # Save clean data
