--- a/dm_ames.Rmd
+++ b/dm_ames.Rmd
@@ -2,7 +2,9 @@
 title: "Data management"
 author: "Math 685 students"
 date: "9/20/2019"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 # Read in data
