--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -2,8 +2,9 @@
 title: "EDA project"
 author: "Math 685 students"
 date: "9/20/2019"
-output: 
-  html_document: 
+output:
+  pdf_document: default
+  html_document:
     keep_md: yes
 keep_md: yes
 ---
